fix rs osa-awards z-index

--- a/src/conferences/rs/sass/components/_osa-award.sass
+++ b/src/conferences/rs/sass/components/_osa-award.sass
@@ -42,6 +42,7 @@
       border-radius: 50%
       width: 1300px
       background: radial-gradient(circle, rgba(2, 254, 57, 0.12) 0%, rgba(0, 0, 0, 0) 70%)
+      z-index: -1
 
     +sm
       flex: 0 0 auto
